# src/index.ts
@@ -2,19 +2,28 @@ import express from "express";
 import estudiantesRouter from "./routes/estudiantes";
 import swaggerUi from "swagger-ui-express";
 import swaggerOutput from "./swagger_output.json";
+import cors from "cors";
 
 const app = express();
-const PORT = 3000;
+const PORT = process.env.PORT ?? 3000;
+app.use(cors());
 
 app.use(express.json());
-
-app.get("/api/status", (req, res) => {
+app.get("/", (req, res) => {
   res.json({
     status: "Servidor en línea",
     version: "1.0.0",
   });
 });
 
+app.get("/api/status", (req, res) => {
+  // #swagger.tags = ['SERVIDOR']
+  res.json({
+    status: "Servidor en línea",
+    version: "1.0.0",
+  });
+});
+app.use("/api/students", estudiantesRouter);
 app.use("/api/estudiantes", estudiantesRouter);
 
 // Swagger
